Open JDK modules for E2E app containers